# Todo-Website-

./: .gitignore  EHACKATHON-PROJECTtodo-app-with-chatbotTodo-Website-backend.env  EHACKATHON-PROJECTtodo-app-with-chatbotTodo-Website-frontend.env.local  README.md  check_backend.py  initialize_database.py  pyproject.toml  tmpclaude-6627-cwd
.claude/: settings.local.json
.claude/skills/api-integration/: README.md  api-integration.skill.md  config.json  template.md
.specify/memory/: agent_context_claude.md  claude-context.md  constitution.md
backend/: BACKEND_README.md  Dockerfile  HUGGING_FACE_README.md  alembic.ini  deploy.sh  fly.toml  huggingface.yml  init_db.py  main.py  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  test_db_connection.py
backend/alembic/: env.py
backend/app/: config.py  config_prod.py  huggingface_app.py  main.py  main_hf.py  serving.py
backend/app/api/: auth.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_todos.py
frontend/: package-lock.json  package.json  tmpclaude-3807-cwd
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/docs/: style-guide.md
specs/1-chat-history/: data-model.md  impl_plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-ui-theme/: plan.md  spec.md  tasks.md
specs/2-ai-chatbot/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/3-ai-chatbot/: README.md  data-model.md  deployment-config.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-suite.md
specs/todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+100 files in other folders)
